# TRL_learning

./: .gitignore  README.md
TRL使用教程/: 01_TRL基础概念.md  02_环境搭建.md  03_PPO基础教程.md  04_RLHF完整流程.md  05_DPO算法详解.md  06_高级定制技巧.md  07_完整项目实战.md  README.md  install.sh  pyproject.toml  requirements.txt  setup_environment.py  uv_快速开始.md  学习指南.md  苹果芯片Mac兼容指南.md
TRL使用教程/notebooks/: DPO实战教程.ipynb  PPO入门实践.ipynb
TRL使用教程/project/: complete_rlhf_project.py  run_project.py
TRL使用教程/scripts/: 01_simple_ppo_example.py  02_interactive_ppo_demo.py  03_reward_model_training.py  04_complete_rlhf_pipeline.py  05_dpo_training_example.py  06_advanced_reward_models.py  07_custom_training_strategies.py
TRL使用教程/utils/: apple_silicon_optimizer.py
TRL源码解析教程/: 00_学习总览.md  01_项目结构深度分析.md  02_TRL导入系统分析.md  03_PPO训练器核心实现.md  04_PPO关键机制深度解析.md  05_PPO训练循环核心实现.md  06_DPO算法源码深度解析.md  07_奖励模型与价值头实现解析.md  08_高级特性与扩展机制.md  09_实战：自定义训练器开发.md  10_源码学习总结与进阶方向.md
TRL源码解析教程/scripts/: custom_trainer_example.py
