[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trl-learning"
version = "0.1.0"
description = "TRL (Transformer Reinforcement Learning) 学习项目"
authors = [
    {name = "TRL Learner", email = "learner@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0", 
    "trl>=0.7.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "wandb>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "bitsandbytes>=0.41.0",
    "deepspeed>=0.10.0",
    "peft>=0.6.0",
    "gradio>=4.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

gpu = [
    "torch[cuda]>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/huggingface/trl"
Documentation = "https://huggingface.co/docs/trl"
Repository = "https://github.com/huggingface/trl"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "notebooks*", "project*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true